appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-extra-native-agent-delete-cancel
---
- assertVisible:
    text: Delete message\?
- assertVisible:
    text: Delete for me
- assertVisible:
    text: Delete for everyone
- tapOn: Cancel
- assertVisible:
    id: presentation.complete
