appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-extra-search-menu-category
---
- assertVisible:
    text: Folders
- assertVisible:
    text: Chats
- assertVisible:
    text: Senders
- assertVisible:
    text: Clear All
- tapOn: Chats
- assertVisible:
    id: presentation.complete
