appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-preview-send
---
- assertVisible: Preview
- assertVisible:
    id: conversation.media.preview.image.0
- tapOn: Send
- assertVisible:
    id: presentation.complete
